--- a/android/BroadcastBestPractice/res/values/strings.xml
+++ b/android/BroadcastBestPractice/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="password">Password: </string>
     <string name="login">Login</string>
     <string name="hint_main">Send force offline broadcast"</string>
+    <string name="remember_password">Remember password</string>
 
 </resources>
