--- a/android/NotificationTest/res/values/strings.xml
+++ b/android/NotificationTest/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="send">Send Notification</string>
+    <string name="text">This is notification layout</string>
 
 </resources>
