--- a/android/Qingfeng/res/values/strings.xml
+++ b/android/Qingfeng/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">Qingfeng</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="slash_quote">~</string>
+    <string name="switch_city">切换城市</string>
+    <string name="refresh_weather">更新天气</string>
 
 </resources>
